--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "vue-lib-template",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "description": "基于vue的组件开发模板",
+  "main": "lib/iip.umd.min.js",
+  "keywords": [
+    "iip"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name iip --dest lib src/index.js"
   },
   "dependencies": {
     "vue": "^2.5.22"
@@ -17,6 +23,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
